--- a/src/scss/components/_help-form.scss
+++ b/src/scss/components/_help-form.scss
@@ -24,6 +24,10 @@
   justify-content: space-between;
   max-width: 670px;
 
+  &__field {
+    margin-bottom: 30px;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 33px;
@@ -32,10 +36,6 @@
     line-height: 150%;
     text-align: center;
     color: var(--color-ebony);
-  }
-
-  &__input {
-    margin-bottom: 15px;
   }
 
   &__btn {
