--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,17 +4,18 @@
   --content-width: 1230px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
-  --color-violet: #edf1fe;
   --color-light: #fff;
-  --color-gray: #424551;
+  --color-violet: #edf1fe;
+  --color-rinse: #d4d9de;
+  --color-sand: #f5f5f5;
   --color-primary: #ffe733;
   --color-active: #f3db25;
-  --color-ebony: #2e2e32;
   --color-blueberry: #518bc4;
-  --color-rinse: #d4d9de;
-  --color-great: #7e8389;
-  --color-blue: #4e3e8e;
   --color-sapphire: #0069b5;
+  --color-blue: #4e3e8e;
+  --color-great: #7e8389;
+  --color-gray: #424551;
+  --color-ebony: #2e2e32;
   --grid-gap: 30px;
 }
 
@@ -232,7 +233,7 @@ input {
   color: var(--color-blue);
 }
 .title--help-form {
-  margin-bottom: 30px;
+  margin-bottom: 22px;
 }
 @media (max-width: 576px) {
   .title--help-form {
@@ -287,7 +288,7 @@ input {
   }
 }
 .descr--help-form {
-  margin-bottom: 10px;
+  margin-bottom: 24px;
 }
 @media (max-width: 576px) {
   .descr--help-form {
@@ -461,6 +462,94 @@ input {
   .to-top {
     right: 20px;
     bottom: 20px;
+  }
+}
+
+.site-modal {
+  border-radius: 4px;
+  width: 600px;
+}
+.site-modal .modal__close {
+  right: 24px;
+  top: 24px;
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/close-modal.svg");
+}
+.site-modal__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  border-radius: 4px 4px 0 0;
+  padding: 22px 24px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--color-ebony);
+  background-color: var(--color-violet);
+}
+@media (max-width: 576px) {
+  .site-modal__title {
+    padding: 20px 20px;
+  }
+}
+.site-modal__form {
+  padding: 40px 24px;
+}
+.site-modal__field {
+  margin-bottom: 28px;
+}
+.site-modal__btn {
+  padding: 10px 40px;
+}
+.site-modal__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 0 0 4px 4px;
+  padding: 16px;
+  background-color: var(--color-sand);
+}
+.site-modal__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 4px;
+  padding: 0 8px;
+  height: 36px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.site-modal__link:hover {
+  background-color: var(--color-rinse);
+}
+.site-modal__link:last-child {
+  margin-left: 8px;
+}
+.site-modal__link span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: normal;
+}
+@media (max-width: 768px) {
+  .site-modal {
+    width: 80%;
+  }
+}
+@media (max-width: 576px) {
+  .site-modal {
+    width: 90%;
   }
 }
 
@@ -1825,7 +1914,7 @@ input {
     display: block;
     width: 100%;
     height: 100%;
-    background: #f7f7f7;
+    background: var(--color-sand);
   }
   .advantages__icon-right {
     -webkit-box-ordinal-group: 2;
@@ -1998,6 +2087,9 @@ input {
   justify-content: space-between;
   max-width: 670px;
 }
+.help-form__field {
+  margin-bottom: 30px;
+}
 .help-form__title {
   margin: 0;
   margin-bottom: 33px;
@@ -2006,9 +2098,6 @@ input {
   line-height: 150%;
   text-align: center;
   color: var(--color-ebony);
-}
-.help-form__input {
-  margin-bottom: 15px;
 }
 .help-form__btn {
   margin-top: 15px;
@@ -2143,6 +2232,7 @@ input {
 }
 
 .form-field {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2150,11 +2240,13 @@ input {
   -webkit-box-direction: reverse;
   -ms-flex-direction: column-reverse;
   flex-direction: column-reverse;
-  height: 82px;
   font-size: 14px;
 }
+.form-field div {
+  position: absolute;
+  bottom: 48px;
+}
 .form-field__input {
-  margin-top: 8px;
   border: 1px solid #d7dadd;
   border-radius: 4px;
   padding-left: 15px;
@@ -2168,6 +2260,9 @@ input {
 .form-field__input:focus {
   outline: 2px solid var(--color-primary);
   outline-offset: 2px;
+}
+.form-field__input:hover {
+  border: 1px solid var(--color-great);
 }
 
 .subscription {
@@ -2197,7 +2292,7 @@ input {
 }
 @media (max-width: 576px) {
   .subscription__container {
-    padding: 35px 30px 35px;
+    padding: 35px 30px;
   }
 }
 
@@ -2219,7 +2314,7 @@ input {
 }
 .subscribe-form__text {
   margin: 0;
-  margin-bottom: 24px;
+  margin-bottom: 34px;
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
@@ -2228,9 +2323,6 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: end;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
@@ -2244,13 +2336,17 @@ input {
 .subscribe-form__field {
   width: 100%;
 }
+@media (max-width: 576px) {
+  .subscribe-form__field {
+    margin-bottom: 15px;
+  }
+}
 .subscribe-form__input {
   border-radius: 4px 0 0 4px;
   width: 100%;
 }
 @media (max-width: 576px) {
   .subscribe-form__input {
-    margin-bottom: 10px;
     border-radius: 4px;
   }
 }
