--- a/src/partials/help-form.html
+++ b/src/partials/help-form.html
@@ -4,16 +4,16 @@
       <h2 class="title title--help-form">Подберите тур с менеджером</h2>
       <p class="descr descr--help-form">Нужна помощь? Теперь не нужно идти в офис продаж</p>
       <form action="#" class="help-form" method="POST" enctype="multipart/form-data">
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="text" data-validate-field="name" name="Имя"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="text" data-validate-field="name" name="Имя"
             placeholder="Ваше имя">
         </label>
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="tel" data-validate-field="tel" name="Телефон"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="tel" data-validate-field="tel" name="Телефон"
             placeholder="Номер телефона">
         </label>
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="email" data-validate-field="email" name="Email"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="email" data-validate-field="email" name="Email"
             placeholder="Ваш email">
         </label>
         <button class="help-form__btn btn-reset btn btn--fill" type="submit">Отправить</button>
