--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,17 +6,18 @@
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
   // colors
-  --color-violet: #edf1fe;
   --color-light: #fff;
-  --color-gray: #424551;
+  --color-violet: #edf1fe;
+  --color-rinse: #d4d9de;
+  --color-sand: #f5f5f5;
   --color-primary: #ffe733;
   --color-active: #f3db25;
-  --color-ebony: #2e2e32;
   --color-blueberry: #518bc4;
-  --color-rinse: #d4d9de;
-  --color-great: #7e8389;
-  --color-blue: #4e3e8e;
   --color-sapphire: #0069b5;
+  --color-blue: #4e3e8e;
+  --color-great: #7e8389;
+  --color-gray: #424551;
+  --color-ebony: #2e2e32;
 
   // sizes
   --grid-gap: 30px;
