--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -133,7 +133,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      background: #f7f7f7;
+      background: var(--color-sand);;
     }
 
     &__icon-right {
