--- a/src/scss/components/_form-field.scss
+++ b/src/scss/components/_form-field.scss
@@ -1,11 +1,15 @@
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column-reverse;
-  height: 82px;
   font-size: 14px;
 
+  div {
+    position: absolute;
+    bottom: 48px;
+  }
+
   &__input {
-    margin-top: 8px;
     border: 1px solid #d7dadd;
     border-radius: 4px;
     padding-left: 15px;
@@ -18,6 +22,10 @@
     &:focus {
       outline: 2px solid var(--color-primary);
       outline-offset: 2px;
+    }
+
+    &:hover {
+      border: 1px solid var( --color-great);
     }
   }
 }
