--- a/src/scss/components/_subscription.scss
+++ b/src/scss/components/_subscription.scss
@@ -1,6 +1,6 @@
 .subscription {
   padding-bottom: 80px;
-  
+
   &__container {
     display: flex;
     align-items: center;
@@ -17,7 +17,7 @@
     }
 
     @include mobile {
-      padding: 35px 30px 35px;
+      padding: 35px 30px;
     }
   }
 }
@@ -37,7 +37,7 @@
 
   &__text {
     margin: 0;
-    margin-bottom: 24px;
+    margin-bottom: 34px;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
@@ -45,7 +45,6 @@
 
   &__content {
     display: flex;
-    align-items: end;
     justify-content: space-between;
     margin-bottom: 24px;
 
@@ -56,6 +55,10 @@
 
   &__field {
     width: 100%;
+
+    @include mobile {
+      margin-bottom: 15px;
+    }
   }
 
   &__input {
@@ -63,7 +66,6 @@
     width: 100%;
 
     @include mobile {
-      margin-bottom: 10px;
       border-radius: 4px;
     }
   }
