--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,9 +1,9 @@
 @import "./vendor/normalize";
 @import "../../node_modules/air-datepicker/air-datepicker";
 @import "../../node_modules/swiper/swiper-bundle.min";
+@import "./vendor/modal";
+// @import "../../node_modules/graph-modal/dist/graph-modal.min";
 
-// стили для модального окна
-// @import "../../node_modules/graph-modal/dist/graph-modal.min"
 
 // стили для табов
 // @import "../../node_modules/graph-tabs/dist/graph-tabs.min"
