--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -10,8 +10,8 @@
           </label>
           <button class="subscribe-form__btn btn-reset btn btn--fill" type="submit">Подписаться</button>
         </div>
-        <div class="subscribe-form__bottom-text">
-          <span class="icon-info"></span>
+        <div class="user-agreement">
+          <span class="user-agreement__icon-info"></span>
           <p>Нажимая «Подписаться», я даю согласие на
             <a href="#" target="_blank">обработку персональных данных.</a>
           </p>
