--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/modals";
 @import "./components/search-filtr/button";
 @import "./components/search-filtr/calendar";
 @import "./components/search-filtr/departure";
