--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
           </a>
         </div>
         <nav class="header__nav">
-          <a class="header__nav-link" href="#">Подобрать тур</a>
+          <a class="header__nav-link" href="#" data-graph-animation="custom" data-graph-path="second">Подобрать тур</a>
           <a class="header__nav-link" href="#">О компании</a>
 
           <div class="more">
