--- a/src/scss/components/_form-field.scss
+++ b/src/scss/components/_form-field.scss
@@ -25,7 +25,23 @@
     }
 
     &:hover {
-      border: 1px solid var( --color-great);
+      border: 1px solid var(--color-great);
     }
+  }
+
+  &__select {
+    margin-right: 8px;
+    border: 1px solid #d4d9de;
+    border-radius: 4px;
+    width: 100%;
+    height: 44px;
+
+    &:hover {
+      border: 1px solid var(--color-great);
+    }
+  }
+
+  &--w {
+    width: 100%;
   }
 }
