created a page about and fixed errors

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
         </div>
         <nav class="header__nav">
           <a class="header__nav-link" href="#" data-graph-animation="custom" data-graph-path="second">Подобрать тур</a>
-          <a class="header__nav-link" href="#">О компании</a>
+          <a class="header__nav-link" href="about.html">О компании</a>
 
           <div class="more">
             <div class="more__dots touch-area">...
