--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import "./components/form-field";
 @import "./components/subscription";
 @import "./components/footer";
+@import "./components/about";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
