--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2842,6 +2842,44 @@ input {
   opacity: 0.7;
 }
 
+.about {
+  background-image: url(../img/about.jpeg);
+  background-position: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.about__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 134px 0;
+  max-width: 492px;
+  text-align: center;
+}
+.about__content {
+  border-radius: 4px;
+  padding: 15px 15px 0;
+  background-color: rgba(255, 255, 255, 0.4588235294);
+}
+.about__title {
+  font-size: 40px;
+  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.5), 0 6px 8px rgba(255, 255, 255, 0.5), 0 12px 24px rgba(255, 255, 255, 0.5);
+}
+.about__text {
+  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.5), 0 6px 8px rgba(255, 255, 255, 0.5), 0 12px 24px rgba(255, 255, 255, 0.5);
+}
+
 .account {
   display: -webkit-box;
   display: -ms-flexbox;
