--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -8,7 +8,8 @@
   <link rel="preload" href="fonts/UbuntuRegular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/vendor.css" />
   <link rel="stylesheet" href="css/main.css" />
+  <script defer src="http://api-maps.yandex.ru/2.1/?apikey=d109db13-e2a8-4c5a-bcb3-30d19aeb16d5&lang=ru-RU" type="text/javascript"></script>
   <script defer src="js/main.js"></script>
-  <script defer src="http://yastatic.net/jquery/2.1.1/jquery.min.js"></script>
-  <script defer src="http://api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU" type="text/javascript"></script>
+
+
 </head>
