--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,7 +20,7 @@
             </div>
           </div>
 
-          <a class="header__nav-link header__nav-link-cover" href="#">Офисы продаж</a>
+          <a class="header__nav-link header__nav-link-cover" href="sales-offices.html">Офисы продаж</a>
           <a class="header__nav-link header__nav-link-cover" href="#">Вход для агентов</a>
         </nav>
       </div>
@@ -30,7 +30,7 @@
       </a>
 
       <div class="header__right">
-        <p id="user-city" class="geolocation"></p>
+        <span class="geolocation"></span>
         <a href="tel:7405999999" class="contact-link contact-link--call">
           <span class="contact-link__value">8(800) 999-9999</span>
         </a>
