--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import "vars";
 @import "mixins";
 @import "fonts";
-@import "settings";
+@import "settings";// базовые подключения
 
 // подключения компонентов страницы
 @import "./components/header";
@@ -25,6 +25,7 @@
 @import "./components/subscription";
 @import "./components/footer";
 @import "./components/about";
+@import "./components/sales-offices";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
@@ -35,3 +36,4 @@
 @import "./components/hero";
 @import "./components/slider-nav";
 @import "./components/catalog";
+@import "./components/breadcrumbs";
