added the 'Offices  detail' pages

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,8 @@
 @import "./components/footer";
 @import "./components/about";
 @import "./components/sales-offices";
+@import "./components/offices";
+@import "./components/offices-map";
 
 // подключения компонентов страницы (мелкие компоненты)
 @import "./components/header-account";
