--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,6 +14,7 @@
   --color-sapphire: #0069b5;
   --color-blue: #4e3e8e;
   --color-great: #7e8389;
+  --color-bgreen: #d8f1c2;
   --color-gray: #424551;
   --color-ebony: #2e2e32;
   --grid-gap: 30px;
@@ -3040,6 +3041,198 @@ input {
   transform: rotate(180deg) translateY(50%);
 }
 
+.offices {
+  padding: 30px 0;
+}
+.offices__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.offices__info {
+  width: 350px;
+}
+.offices__title {
+  margin-bottom: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 120%;
+}
+.offices__address {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 120%;
+}
+.offices__phone {
+  position: relative;
+  margin-bottom: 16px;
+  padding-left: 40px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 120%;
+}
+.offices__phone:after {
+  background-image: url(../img/phone2.svg);
+  content: "";
+  height: 21px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 21px;
+}
+.offices__email {
+  position: relative;
+  margin-bottom: 16px;
+  padding-left: 40px;
+  font-size: 16px;
+  line-height: 120%;
+}
+.offices__email:after {
+  background-image: url(../img/email-icon.svg);
+  content: "";
+  height: 19px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 24px;
+}
+.offices__hours {
+  position: relative;
+  padding-left: 40px;
+}
+.offices__hours:after {
+  background-image: url(../img/time.svg);
+  content: "";
+  height: 23px;
+  left: 0;
+  position: absolute;
+  top: -3px;
+  width: 26px;
+}
+
+.office-hours__title {
+  position: relative;
+  margin-bottom: 12px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 120%;
+}
+.office-hours__weekday {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+.office-hours__time {
+  width: 50%;
+}
+.office-hours__saturday {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+.office-hours__sunday {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.msk {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk2 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk3 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk4 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk5 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk6 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.msk7 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.spb {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.spb2 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.spb3 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.spb4 {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.kzn {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+.vlg {
+  width: 60%;
+  height: 600px;
+  background-color: var(--color-bgreen);
+}
+
+[class*=copyrights-pane] {
+  display: none !important;
+}
+
 .account {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3528,7 +3721,7 @@ input {
   color: #9a9ca5;
 }
 .breadcrumbs__link {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 150%;
   color: var(--color-gray);
   -webkit-transition: color 0.3s ease-in-out;
