--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -16,6 +16,7 @@
   --color-sapphire: #0069b5;
   --color-blue: #4e3e8e;
   --color-great: #7e8389;
+  --color-bgreen: #d8f1c2;
   --color-gray: #424551;
   --color-ebony: #2e2e32;
 
